--- a/src/app/pages/booking-notes/booking-notes.component.scss
+++ b/src/app/pages/booking-notes/booking-notes.component.scss
@@ -1,5 +1,4 @@
 .output-section {
-  width: 100%;
   margin-left: 10px;
   margin-right: 10px;
 
