--- a/src/app/pages/footer/footer.component.scss
+++ b/src/app/pages/footer/footer.component.scss
@@ -8,7 +8,7 @@
   color: #6c6c6c;
 
   .copyright {
-    margin-left: auto;
+    margin: auto 0 auto auto;
     display: flex;
     cursor: pointer;
     text-decoration: none;
@@ -42,6 +42,17 @@
       margin-left: 2px;
       width: 20px;
       height: 20px;
+    }
+  }
+
+  .github-link {
+    display: flex;
+
+    .octicon {
+      height: 35px;
+      width: 35px;
+      margin: auto 10px auto auto;
+      fill: currentColor;
     }
   }
 }
