--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -19,7 +19,7 @@
 
     p {
       margin: 5px 0 0 0;
-      width: max-content;
+      width: auto;
     }
 
     span {
@@ -28,14 +28,4 @@
     }
   }
 
-  .github-link {
-    display: flex;
-
-    .octicon {
-      height: 35px;
-      width: 35px;
-      margin: auto 10px auto auto;
-      fill: currentColor;
-    }
-  }
 }
